RESOLVED - bug 231698: [api] make active search facilities internal https://bugs.eclipse.org/bugs/show_bug.cgi?id=231698

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -89,6 +89,7 @@ before installing Mylyn 2.3.</p>
 	<li>Can create new tasks from the Open Task dialog</li>
 	<li>bug 221965 ?</li>
 	<li>Task editor content assist works for multiple comma-delimited entries</li>
+	<li>Can no longer schedule the end of the workday (facility no longer used by UI)</li>
 </ul>
 
 <p><b>TO REVIEW FOR 3.0</b></p>
