NEW - bug 227639: [api] decouple tasks.ui and connectors from org.eclipse.ui.ide https://bugs.eclipse.org/bugs/show_bug.cgi?id=227639

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -96,6 +96,7 @@ before installing Mylyn 2.3.</p>
 <ul>
 	<li>Find box on search view</li>
 	<li>Content assist for the task editor</li>
+	<li>Icon/decorator for the Unscheduled bin</li>
 </ul>
 
 <hr>
