NEW - bug 216866: Problems view shows empty categories when 'group by' is enabled https://bugs.eclipse.org/bugs/show_bug.cgi?id=216866

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -90,6 +90,7 @@ before installing Mylyn 2.3.</p>
 	<li>bug 221965 ?</li>
 	<li>Task editor content assist works for multiple comma-delimited entries</li>
 	<li>Can no longer schedule the end of the workday (facility no longer used by UI)</li>
+	<li>Focus for the Breakpoints view</li>
 </ul>
 
 <p><b>TO REVIEW FOR 3.0</b></p>
