NEW - bug 227660: track Mylyn 3.0 API creation and migration https://bugs.eclipse.org/bugs/show_bug.cgi?id=227660

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -100,6 +100,11 @@ before installing Mylyn 2.3.</p>
 	<li>Icon/decorator for the Unscheduled bin</li>
 </ul>
 
+<p><b>DONE FO 3.0</b></p>
+<ul>
+	<li>Context refresh is much faster (e.g. can open a project while context is active)</li>
+</ul>
+
 <hr>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 2.3</span> </p>
