--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -95,6 +95,7 @@ before installing Mylyn 2.3.</p>
 
 <p><b>TO REVIEW FOR 3.0</b></p>
 <ul>
+	<li>New task List snapshot and restore</li>
 	<li>Find box on search view</li>
 	<li>Content assist for the task editor</li>
 	<li>Icon/decorator for the Unscheduled bin</li>
