RESOLVED - bug 232441: [patch] TaskListSortDialog can not set Date Created https://bugs.eclipse.org/bugs/show_bug.cgi?id=232441

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -99,6 +99,7 @@ before installing Mylyn 2.3.</p>
 	<li>Find box on search view</li>
 	<li>Content assist for the task editor</li>
 	<li>Icon/decorator for the Unscheduled bin</li>
+	<li>Local subtasks are supported (need to turn on)</li>
 </ul>
 
 <p><b>DONE FO 3.0</b></p>
