--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -12,12 +12,20 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
-		<td bgcolor="#E0D0E6"><font size="1">2.3<br>
-		<i>Feb 27, 2008</i></font></td>
+		<td bgcolor="#E0D0E6"><font size="1">3.0<br>
+		<i>June 25, 2008</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2008-03-02&chfieldto=2008-06-26&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1"><i>315<br>bugs</i></font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">...</font></td>
+	</tr>
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">2.3<br>
+		<i>Feb 27, 2008</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-12-21&chfieldto=2008-03-01&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1"><i>276<br>bugs</i></font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">Willian Mitsuda contributed 
+		<td bgcolor="#FAF7FB"><font size="1">Willian Mitsuda contributed 
 		screenshot markup and numerous other improvements.&nbsp; Frank Becker 
 		provided nine patches to the Bugzilla Connector and Tasks UI.&nbsp; 
 		Additional contributions were provided by Maarten Meijer, Helen 
