NEW - bug 227660: track Mylyn 3.0 API creation and migration https://bugs.eclipse.org/bugs/show_bug.cgi?id=227660

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -110,9 +110,10 @@ before installing Mylyn 2.3.</p>
 	<li>Local subtasks are supported (need to turn on)</li>
 </ul>
 
-<p><b>DONE FO 3.0</b></p>
+<p><b>DONE FOR 3.0</b></p>
 <ul>
 	<li>Context refresh is much faster (e.g. can open a project while context is active)</li>
+	<li>UI cleanup: editor gutter markers are gone (now in Sandbox)</li>
 </ul>
 
 <hr>
