NEW - bug 227660: track Mylyn 3.0 API creation and migration https://bugs.eclipse.org/bugs/show_bug.cgi?id=227660

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -108,6 +108,7 @@ before installing Mylyn 2.3.</p>
 	<li>Content assist for the task editor</li>
 	<li>Icon/decorator for the Unscheduled bin</li>
 	<li>Local subtasks are supported (need to turn on)</li>
+	<li>Can attach image from clipboard</li>
 </ul>
 
 <p><b>DONE FOR 3.0</b></p>
