RESOLVED - bug 233825: NullPointerException from org.eclipse.team.core maybe (?) caused by Mylyn changesets https://bugs.eclipse.org/bugs/show_bug.cgi?id=233825

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -109,12 +109,15 @@ before installing Mylyn 2.3.</p>
 	<li>Icon/decorator for the Unscheduled bin</li>
 	<li>Local subtasks are supported (need to turn on)</li>
 	<li>Can attach image from clipboard</li>
+	<li>New bug reporting facility.</li>
 </ul>
 
 <p><b>DONE FOR 3.0</b></p>
 <ul>
 	<li>Context refresh is much faster (e.g. can open a project while context is active)</li>
 	<li>UI cleanup: editor gutter markers are gone (now in Sandbox)</li>
+	<li>Save unsubmitted tasks</li>
+	<li>Content assist of task IDs (comments, depends)</li>
 </ul>
 
 <hr>
