REOPENED - bug 219897: consider renaming the "Task List" view to "Tasks" https://bugs.eclipse.org/bugs/show_bug.cgi?id=219897

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -118,6 +118,7 @@ before installing Mylyn 2.3.</p>
 	<li>UI cleanup: editor gutter markers are gone (now in Sandbox)</li>
 	<li>Save unsubmitted tasks</li>
 	<li>Content assist of task IDs (comments, depends)</li>
+	<li>Create tasks from markers in all markers views.</li>
 </ul>
 
 <hr>
