--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -119,6 +119,7 @@ before installing Mylyn 2.3.</p>
 	<li>Save unsubmitted tasks</li>
 	<li>Content assist of task IDs (comments, depends)</li>
 	<li>Create tasks from markers in all markers views.</li>
+	<li>All task references in attributes are navigable</li>
 </ul>
 
 <hr>
