NEW - bug 226598: move "Validate Settings" button to the lower-left of the dialog https://bugs.eclipse.org/bugs/show_bug.cgi?id=226598

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -120,6 +120,12 @@ before installing Mylyn 2.3.</p>
 	<li>Content assist of task IDs (comments, depends)</li>
 	<li>Create tasks from markers in all markers views.</li>
 	<li>All task references in attributes are navigable</li>
+	<li>Improved saving and restore from history/snapshot</li>
+	<li>Filter task search results</li>
+	<li>Context model shows indirectly modified resources</li>
+	<li>Clear outgoing changes (was there in 2.3 but should point out).</li>
+	<li>Unscheduled container in the Scheduled presentation, one-click 
+	presentation switching</li>
 </ul>
 
 <hr>
