--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -98,7 +98,8 @@ before installing Mylyn 2.3.</p>
 	<li>bug 221965 ?</li>
 	<li>Task editor content assist works for multiple comma-delimited entries</li>
 	<li>Can no longer schedule the end of the workday (facility no longer used by UI)</li>
-	<li>Focus for the Breakpoints view</li>
+	<li>Focus for the Breakpoints view (no guaranteed visibility, file level 
+	granularity for line breakpoints)</li>
 </ul>
 
 <p><b>TO REVIEW FOR 3.0</b></p>
@@ -126,6 +127,9 @@ before installing Mylyn 2.3.</p>
 	<li>Clear outgoing changes (was there in 2.3 but should point out).</li>
 	<li>Unscheduled container in the Scheduled presentation, one-click 
 	presentation switching</li>
+	<li>Focused views indicate if they have nothing to show</li>
+	<li>New Bugzilla attributes layout (votes, etc)</li>
+	<li>Improved content assist (e.g. CC multiple people)</li>
 </ul>
 
 <hr>
