--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -88,68 +88,189 @@ Mylyn 0.5</a>,&nbsp;
 <a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
 Mylyn 0.3</a></b></p>
 <p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
-before installing Mylyn 2.3.</p>
-
-<p><b>IN PROGRESS FOR 3.0</b></p>
-<ul>
-	<li>Task editor content assist proposals</li>
-	<li>Content assist in Bugzilla search page</li>
-	<li>Can create new tasks from the Open Task dialog</li>
-	<li>bug 221965 ?</li>
-	<li>Task editor content assist works for multiple comma-delimited entries</li>
-	<li>Can no longer schedule the end of the workday (facility no longer used by UI)</li>
-	<li>Focus for the Breakpoints view (no guaranteed visibility, file level 
-	granularity for line breakpoints)</li>
-</ul>
-
-<p><b>TO REVIEW FOR 3.0</b></p>
-<ul>
-	<li>New task List snapshot and restore</li>
-	<li>Find box on search view</li>
-	<li>Content assist for the task editor</li>
-	<li>Icon/decorator for the Unscheduled bin</li>
-	<li>Local subtasks are supported (need to turn on)</li>
-	<li>Can attach image from clipboard</li>
-	<li>New bug reporting facility.</li>
-</ul>
+before installing Mylyn 3.0.</p>
 
 <p><b>DONE FOR 3.0</b></p>
 <ul>
-	<li>Context refresh is much faster (e.g. can open a project while context is active)</li>
-	<li>UI cleanup: editor gutter markers are gone (now in Sandbox)</li>
-	<li>Save unsubmitted tasks</li>
-	<li>Content assist of task IDs (comments, depends)</li>
-	<li>Create tasks from markers in all markers views.</li>
-	<li>All task references in attributes are navigable</li>
-	<li>Improved saving and restore from history/snapshot</li>
-	<li>Filter task search results</li>
-	<li>Context model shows indirectly modified resources</li>
-	<li>Clear outgoing changes (was there in 2.3 but should point out).</li>
-	<li>Unscheduled container in the Scheduled presentation, one-click 
-	presentation switching</li>
-	<li>Focused views indicate if they have nothing to show</li>
-	<li>New Bugzilla attributes layout (votes, etc)</li>
-	<li>Improved content assist (e.g. CC multiple people)</li>
+	<li>Extras moved</li>
 </ul>
 
 <hr>
 
-<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 2.3</span> </p>
+<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.0</span> </p>
 <ul>
 	<li><a href="#task-list">Task List (2)</a></li>
 	<li><a href="#task-editor">Task Editor (2)</a></li>
-	<li><a href="#focused-ui">Task-Focused UI (3)</a></li>
+	<li><a href="#focused-ui">Focused UI (3)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (1)</a></li>
 	<li><a href="#trac">Trac Connector (1)</a></li>
 	<li><a href="#jira">JIRA Connector (2)</a></li>
-	<li><a href="#xplanner">XPlanner Connector (1)</a></li>
+	<li><a href="#incubator">Incubator</a></li>
 </ul>
 
 <h2><a name="task-list">Task List</a></h2>
 
-<table cellpadding="10" cellspacing="0" id="table393">
+<table cellpadding="10" cellspacing="0" id="table403">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Task List Restore</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[snapshot every hour, updated UI]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table404">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Task Content Assist</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[in task editor, comma delimited for people entries, 
+			task dependencies, all references are navigable]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table407">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Filter Task Search Results</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[find box, filter completed]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table410">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Scheduled Presentation Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[unscheduled container, Future container, one-click 
+			presentation switching]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table411">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Attachment Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[attach images from the clipboard, PNG attachments 
+			supported for screenshots and otherwise]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Save Unsubmitted Tasks</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">...</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table417">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Create Tasks from any Marker</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[problems, bookmarks, tasks]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table405">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>XXX misc streamlining</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[create new tasks from Open Task dialog, no more 
+			preference for setting the end of the worday, clear outgoing changes 
+			using button on editor]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table412">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>XXX</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">...</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table393">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Task Scheduling Streamlining</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -199,7 +320,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table382">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Open Task Dialog Improved</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -463,7 +584,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table402">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Screenshot Annotations</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -482,7 +603,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table396">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Task Editor Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -613,11 +734,98 @@ before installing Mylyn 2.3.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp; </p>
-<h2><a name="focused-ui">Task-Focused UI</a></h2>
+<h2><a name="focused-ui">Focused UI</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table409">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Focus the Breakpoints View</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">&nbsp;[no guaranteed visibility, file level 
+			granularity for line breakpoints)]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table418">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Indirectly Modified Resources Become Interesting</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[...]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table414">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>UI Cleanup</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[editor gutter markers are gone (now in Sandbox)]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table419">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Empty Context Indication</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[overlay on navigator views]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table413">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Lazier Startup</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[merge with below, context refresh is much faster 
+			(e.g. opening whole project)]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <table cellpadding="10" cellspacing="0" id="table394">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Performance Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -640,7 +848,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table401">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Focus the All Markers View<br>
 			(Eclipse 3.4 only)</b></p>
 			</td>
@@ -663,7 +871,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table395">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Commit Messages Warnings</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -844,9 +1052,43 @@ before installing Mylyn 2.3.</p>
 
 <h2><a name="bugzilla">Bugzilla Connector</a></h2>
 
-<table cellpadding="10" cellspacing="0" id="table397">
+<table cellpadding="10" cellspacing="0" id="table416">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Layout Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[attributes section, votes]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table406">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Content Assist in Search</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">...</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table397">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Query Multiple Emails</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -957,7 +1199,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table398">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Subtasks Supported</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -997,9 +1239,26 @@ before installing Mylyn 2.3.</p>
 <p class="MsoPlainText">&nbsp;</p>
 <h2><a name="jira">JIRA Connector</a></h2>
 
-<table cellpadding="10" cellspacing="0" id="table400">
+<table cellpadding="10" cellspacing="0" id="table408">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>XXX</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[time spent value is shown]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table400">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Markup Supported</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -1017,7 +1276,7 @@ before installing Mylyn 2.3.</p>
 
 <table cellpadding="10" cellspacing="0" id="table391">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Password Prompting Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -1073,12 +1332,29 @@ before installing Mylyn 2.3.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp;</p>
-<h2><a name="xplanner">XPlanner Connector (Incubation)</a></h2>
+<h2><a name="incubator">Incubator</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table420">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>XXX</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">[update site rearrangement]</p>
+			<p class="MsoPlainText">
+			&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <table cellpadding="10" cellspacing="0" id="table399">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Time Tracking Integration</b></p>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
+			<p align="right"><b>XPlanner Time Tracking Integration</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">The active time maintained by Mylyn can now be 
@@ -1097,7 +1373,7 @@ before installing Mylyn 2.3.</p>
 <table cellpadding="10" cellspacing="0" id="table356">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>New Task Editor</b></p>
+			<p align="right"><b>XPlanner New Task Editor</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">The XPlanner connector now provides a rich 
