--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -90,21 +90,16 @@ Mylyn 0.3</a></b></p>
 <p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
 before installing Mylyn 3.0.</p>
 
-<p><b>DONE FOR 3.0</b></p>
-<ul>
-	<li>Extras moved</li>
-</ul>
-
 <hr>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.0</span> </p>
 <ul>
-	<li><a href="#task-list">Task List (2)</a></li>
-	<li><a href="#task-editor">Task Editor (2)</a></li>
-	<li><a href="#focused-ui">Focused UI (3)</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector (1)</a></li>
-	<li><a href="#trac">Trac Connector (1)</a></li>
-	<li><a href="#jira">JIRA Connector (2)</a></li>
+	<li><a href="#task-list">Task List (x)</a></li>
+	<li><a href="#task-editor">Task Editor (x)</a></li>
+	<li><a href="#focused-ui">Focused UI (x)</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector (x)</a></li>
+	<li><a href="#trac">Trac Connector (x)</a></li>
+	<li><a href="#jira">JIRA Connector (x)</a></li>
 	<li><a href="#incubator">Incubator</a></li>
 </ul>
 
@@ -808,11 +803,12 @@ before installing Mylyn 3.0.</p>
 <table cellpadding="10" cellspacing="0" id="table413">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Lazier Startup</b></p>
+			<p align="right"><b>Performance Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">[merge with below, context refresh is much faster 
-			(e.g. opening whole project)]</p>
+			(e.g. opening whole project) adding and removing from context is 
+			faster]</p>
 			<p class="MsoPlainText">
 			&nbsp;</td>
 		</tr>
