--- a/new/new.html
+++ b/new/new.html
@@ -102,13 +102,13 @@ before installing Mylyn 3.0.</p>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.0</span> </p>
 <ul>
-	<li><a href="#task-list">Task List (x)</a></li>
-	<li><a href="#task-editor">Task Editor (x)</a></li>
-	<li><a href="#focused-ui">Focused UI (x)</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector (x)</a></li>
-	<li><a href="#trac">Trac Connector (x)</a></li>
-	<li><a href="#jira">JIRA Connector (x)</a></li>
-	<li><a href="#incubator">Incubator</a></li>
+	<li><a href="#task-list">Task List (5)</a></li>
+	<li><a href="#task-editor">Task Editor (3)</a></li>
+	<li><a href="#focused-ui">Focused UI (3)</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector (3)</a></li>
+	<li><a href="#trac">Trac Connector</a></li>
+	<li><a href="#jira">JIRA Connector</a></li>
+	<li><a href="#incubator">Incubator (1)</a></li>
 </ul>
 
 <h2><a name="task-list">Task List</a></h2>
