--- a/new/new.html
+++ b/new/new.html
@@ -107,7 +107,7 @@ before installing Mylyn 3.0.</p>
 	<li><a href="#focused-ui">Focused UI (3)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (3)</a></li>
 	<li><a href="#trac">Trac Connector</a></li>
-	<li><a href="#jira">JIRA Connector</a></li>
+	<li><a href="#jira">JIRA Connector (1)</a></li>
 	<li><a href="#incubator">Incubator (1)</a></li>
 </ul>
 
@@ -1294,6 +1294,34 @@ before installing Mylyn 3.0.</p>
 
 <p class="MsoPlainText">&nbsp;</p>
 <h2><a name="jira">JIRA Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table423">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Additional Repository Settings</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Additional settings on now available on the <i>
+			Properties</i> page of JIRA repositories (access via <i>Task 
+			Repositories </i>(view) -&gt; Right Click repository -&gt; <i>Properties</i>).&nbsp; 
+			If your server uses compression, enable that option to improve 
+			performance.&nbsp; If you're using a server that contains less than 
+			hundreds of projects, you can set the configuration to refresh 
+			automatically, meaning that new settings will be updated in the 
+			background (leave this off for large public servers like Apache).&nbsp; 
+			If tasks are not showing up as completed because your resolutions 
+			have been customized, try the <i>Completed tasks</i> option.&nbsp; 
+			If your time tracking values have been customized on the server, you 
+			will also need to set the corresponding values as visible below.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.0/jira-settings.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <table cellpadding="10" cellspacing="0" id="table400">
 		<tr>
