*** empty log message ***

--- a/new/new.html
+++ b/new/new.html
@@ -16,7 +16,7 @@
 		<i>June 25, 2008</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2008-03-02&chfieldto=2008-06-26&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1"><i>581<br>bugs</i></font></a></td>
+		<font size="1">581<br>bugs</font></a></td>
 		<td bgcolor="#E0D0E6"><font size="1">Frank Becker provided 30 patches 
 		that improved the Bugzlla Connnector and framework, Helen Bershadskaya 
 		resolved 14 bugs and ported the XPlanner connector to 3.0, Shawn Minto 
@@ -32,7 +32,7 @@
 		<i>Feb 27, 2008</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-12-21&chfieldto=2008-03-01&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1"><i>276<br>bugs</i></font></a></td>
+		<font size="1">276<br>bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Willian Mitsuda contributed 
 		screenshot markup and numerous other improvements.&nbsp; Frank Becker 
 		provided nine patches to the Bugzilla Connector and Tasks UI.&nbsp; 
@@ -45,7 +45,7 @@
 		<i>Dec 19, 2007</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-09-29&chfieldto=2007-12-20&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1"><i>384</i></font></a><i><a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-09-29&chfieldto=2007-12-20&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0="><br><font size="1">bugs</font></a></i></td>
+		<font size="1">384</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Frank Becker resolved a total of 19 
 		bugs with Bugzilla and the task editor. Willian Mitsuda contributed to 
 		screenshot capture and provided several other improvements. Maarten 
@@ -144,7 +144,7 @@ before installing Mylyn 3.0.</p>
 			Eclipse, including the <i>Bookmarks, Tasks, Problems </i>and <i>
 			Markers </i>views.&nbsp; The contents of the new task's description 
 			will contain details about the marker that the task was created 
-			from.&nbsp; For example, if as certain bookmark or problem marker 
+			from.&nbsp; For example, if a certain bookmark or problem marker 
 			correspond to a significant unit of work, or will involve 
 			collaboration with others, you can easily turn that marker into a 
 			task in order to start building up a context for it as you work.</p>
@@ -193,7 +193,7 @@ before installing Mylyn 3.0.</p>
 			will see all tasks with incoming information that have not been 
 			scheduled, enabling use of this presentation for reviewing 
 			incomings.&nbsp; This container also ensures that all tasks can be 
-			search for using the <i>Find</i> box without needing to switch to 
+			searched for using the <i>Find</i> box without needing to switch to 
 			the <i>Categorized</i> presentation.&nbsp; In addition, you can now 
 			toggle between the <i>Categorized </i>and <i>Scheduled </i>presentations with a single click of the toolbar button in addition 
 			to using the drop-down. Note that the workday start/end preference 
