--- a/new/new.html
+++ b/new/new.html
@@ -12,13 +12,36 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.0.2<br>
+		<i>Sep 18, 2008</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2008-07-22&chfieldto=2008-09-19&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">175<br>bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">David Green provided 43 patches for 
+		WikiText, Jingwen Ou provided enhancements for the Sandbox, Shawn Minto resolved
+		multiple bugs in the tasks framework and Frank Becker implemented bug fixes for Bugzilla.
+        Additional bug fixes were provided by Maarten Meijer, Helen Bershadskaya, Andrew Eisenberg and
+        Peter Stibrany and David Shepherd.</font></td>
+	</tr>
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.0.1<br>
+		<i>Jul 21, 2008</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2008-06-27&chfieldto=2008-07-21&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">108<br>bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Jingwen Ou
+		provided enhancements for the Sandbox. Helen Bershadskaya resolved bugs for 
+		the XPlanner connector. Additional bug fixes were provided by Shawn Minto
+		and Terry Hon.</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#E0D0E6"><font size="1">3.0<br>
 		<i>June 25, 2008</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2008-03-02&chfieldto=2008-06-26&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1">581<br>bugs</font></a></td>
 		<td bgcolor="#E0D0E6"><font size="1">Frank Becker provided 30 patches 
-		that improved the Bugzlla Connnector and framework, Helen Bershadskaya 
+		that improved the Bugzilla Connnector and framework, Helen Bershadskaya 
 		resolved 14 bugs and ported the XPlanner connector to 3.0, Shawn Minto 
 		provided numerous patches for the Tasks API, Leo Dos Santos provided Mac 
 		improvements and Willian Mitsuda improved screenshot attachments.&nbsp; 
