NEW - bug 221939: [releng] manage branches https://bugs.eclipse.org/bugs/show_bug.cgi?id=221939

--- a/new/new.html
+++ b/new/new.html
@@ -11,6 +11,18 @@
 		<td bgcolor="#595791" width="*" align="center"><b>
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
+	
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.0.3<br>
+		<i>Oct 15, 2008</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=WikiText&component=XML&component=XPlanner&target_milestone=3.0.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">15<br>bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Shawn Minto provided patches for
+		for the context framework. <b>This release fixes a critical bug that can cause
+		the local task editor to fail.</b> 
+		</font></td>
+	</tr>
 	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.0.2<br>
 		<i>Sep 18, 2008</i></font></td>
