--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -23,6 +23,8 @@ Mylyn 0.3</a></p>
 <li>obsolete attachments are shown in a lighter color in the task editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=215549">bug 215549</a>)
 <li>Bugzilla: custom attributes are supported (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=226851">bug 226851</a>)
 <li>WikiText: extension is configurable from task repository properties (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=244579">bug 244579</a>, <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=253115">bug 253115</a>)
+<p/>
+<li>JIRA: work log entries are shown in the task editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=244579">bug 244579</a>, <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=214040">bug 214040</a>)
 </ul>
 
 </body>
