RESOLVED - bug 253125: externalize strings for org.eclipse.mylyn.tasks.* https://bugs.eclipse.org/bugs/show_bug.cgi?id=253125

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -24,7 +24,8 @@ Mylyn 0.3</a></p>
 <li>Bugzilla: custom attributes are supported (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=226851">bug 226851</a>)
 <li>WikiText: extension is configurable from task repository properties (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=244579">bug 244579</a>, <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=253115">bug 253115</a>)
 <p/>
-<li>JIRA: work log entries are shown in the task editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=244579">bug 244579</a>, <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=214040">bug 214040</a>)
+<li>JIRA: work log entries are shown in the task editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=214040">bug 214040</a>)
+<li>Externalization of all strings (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=215116">bug 215116</a>)
 </ul>
 
 </body>
