RESOLVED - bug 120499: [context] make explicitly created resources interesting, and ignore others, e.g. from CVS checkout https://bugs.eclipse.org/bugs/show_bug.cgi?id=120499

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -26,6 +26,9 @@ Mylyn 0.3</a></p>
 <p/>
 <li>JIRA: work log entries are shown in the task editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=214040">bug 214040</a>)
 <li>Externalization of all strings (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=215116">bug 215116</a>)
+<p/>
+<li>Ignore resource changes when updating from version control (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=120499">bug 120499</a>)
+<li>Bugzilla: support for Bugzilla 3.2 and flags (requires Bugzilla 3.2) (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252297">bug 252297</a>, <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=186265">bug 186265</a>)
 </ul>
 
 </body>
