NEW - bug 261127: support Open with Browser for searches https://bugs.eclipse.org/bugs/show_bug.cgi?id=261127

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -29,6 +29,9 @@ Mylyn 0.3</a></p>
 <p/>
 <li>Ignore resource changes when updating from version control (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=120499">bug 120499</a>)
 <li>Bugzilla: support for Bugzilla 3.2 and flags (requires Bugzilla 3.2) (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252297">bug 252297</a>, <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=186265">bug 186265</a>)
+<p/>
+<li>support Show In menu for task search (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260971">bug 260971</a>)
+<li>support Open with Browser for searches (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261127">bug 261127</a>)
 </ul>
 
 </body>
