--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -32,6 +32,7 @@ Mylyn 0.3</a></p>
 <p/>
 <li>support Show In menu for task search (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260971">bug 260971</a>)
 <li>support Open with Browser for searches (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261127">bug 261127</a>)
+<li>support deprecating patches (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=152065">bug 152065</a>)
 </ul>
 
 </body>
