--- a/new/new.html
+++ b/new/new.html
@@ -18,7 +18,7 @@
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=m3.0.5&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=WikiText&component=XML&component=XPlanner&target_milestone=3.0.4&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1">1<br>bug</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1">This release fixes Bugzilla 3.2.2 support.
+		<td bgcolor="#FAF7FB"><font size="1">This release has support for Bugzilla 3.2.2.
 		</font></td>
 	</tr>
 	<tr>
